# TensorRT-LLM

./: .gitignore  BUILD_SUCCESS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists_minimal.txt  CMakeLists_w4a16_test.txt  COMPILATION_FIX.md  EXTRACTION_GUIDE.md  EXTRACTION_SUMMARY.md  GEMV_API_GUIDE.md  H800_COMMANDS.sh  H800_QUICKSTART.md  IMPORTANT_NOTICE.md  KERNEL_EXTRACTION_GUIDE.md  MOE_FC2_EPILOGUE_SCATTER_EXPLAINED.md  MOE_IMPLEMENTATION_GUIDE.md  MOE_TOKEN_GATHERING_EXPLAINED.md  QUICKSTART.md  README.md  README_W4A16.md  README_W4A16_EXTRACTION.md  STATUS_REPORT.md  VLLM_VS_TRTLLM_MOE_COMPARISON.md  W4A16_BUILD_CONCLUSION.md  W4A16_FINAL_SUMMARY.md  W4A16_GEMV_BUILD_GUIDE.md  W4A16_INTEGRATION_README.md  W4A16_PERFORMANCE_ANALYSIS.md  W4A16_PERFORMANCE_IMPROVEMENTS.md  W4A16_SM90_SUCCESS.md  W4A16_STANDALONE_USAGE.md  W4A16_USAGE_GUIDE.md  build.sh  build_minimal.sh  build_w4a16_gemv.sh  build_w4a16_lib.sh  build_w4a16_only.sh  build_w4a16_sm90.sh  build_w4a16_test.sh  build_w4a16_test_final.sh  (+5 more)
cpp/include_stubs/: NvInferRuntime.h
docs/: moe_fusion_trt_engine_no_lora.md  moe_vllm_vs_trtllm_no_lora.md
fpA_intB_standalone/: CMakeLists.txt
fpA_intB_standalone/test/: test_fpA_intB_gemm.cu
generated_kernels_fp16/: cutlass_kernel_file_gemm_sm90_M128_group10.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group11.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group13.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group14.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group15.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group22.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group25.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group26.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group10.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group13.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group5.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group6.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group7.generated.cu
generated_kernels_w4a16_only/: cutlass_kernel_file_gemm_sm90_M128_group12.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group21.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group23.generated.cu  cutlass_kernel_file_gemm_sm90_M128_group24.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group11.generated.cu  cutlass_kernel_file_gemm_sm90_M64_group12.generated.cu
include/: NvInferRuntime.h
include/tensorrt_llm/common/: assert.h  cudaBf16Wrapper.h  (+3 more)
moe_fused_gemm_standalone/: CMakeLists.txt  README.md
moe_fused_gemm_standalone/cpp/include/tensorrt_llm/common/: assert.h  cudaUtils.h
moe_fused_gemm_standalone/cpp/tensorrt_llm/kernels/cutlass_kernels/moe_gemm/launchers/: fused_moe_gemm_launcher_sm80.inl  fused_moe_gemm_sm80_wrappers.cu  fused_moe_gemm_sm80_wrappers.h
moe_fused_gemm_standalone/scripts/: run_all_configs.sh
moe_fused_gemm_standalone/test/: test_moe_fused_gemm.cu
moe_kernels_standalone/: README.md
moe_kernels_standalone/01_topk_gating/: CMakeLists.txt  README.md  topk_gating_kernel.cu
moe_kernels_standalone/02_permute_sort/: CMakeLists.txt  README.md  permute_sort_kernel.cu
moe_kernels_standalone/03_expand_input/: CMakeLists.txt  README.md  expand_input_kernel.cu
moe_kernels_standalone/04_swiglu_activation/: CMakeLists.txt  README.md  swiglu_activation_kernel.cu
moe_kernels_standalone/05_finalize_routing/: CMakeLists.txt  README.md  finalize_routing_kernel.cu
src/: benchmark_w4a16.cu  debug_kernel.cu  fp16_int4_gemm_kernel.cu  logger_stub.cpp  minimal_test.cu  missing_implementations.cpp  safe_test.cu  simple_test.cu  test_main.cu  test_with_bias.cu  w4a16_sm90_kernel.cu
src/cubin/: fmha_v2_flash_attention_bf16_64_128_S_q_kv_128_softmax_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_kv_128_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_alibi_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_softcapping_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_q_paged_kv_128_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_alibi_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_softcapping_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_softcapping_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_128_S_qkv_128_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_32_S_qkv_128_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_64_32_S_qkv_128_softcapping_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_q_kv_128_softmax_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_q_kv_128_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_q_paged_kv_128_alibi_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_q_paged_kv_128_softcapping_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_q_paged_kv_128_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_qkv_128_alibi_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_qkv_128_sage_64_64_256_output_bf16_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_qkv_128_softcapping_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_64_256_S_qkv_128_tma_ws_sm90.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_q_kv_32_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_q_kv_64_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_q_paged_kv_32_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_q_paged_kv_40_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_q_paged_kv_48_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_q_paged_kv_64_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_qkv_32_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_qkv_40_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_qkv_48_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_128_128_S_qkv_64_sm89.cubin.cpp  fmha_v2_flash_attention_e4m3_fp32_64_32_S_q_kv_128_sm89.cubin.cpp  (+48 more)
test/: test_flash_attention.cpp  test_performance.cu  test_real_weights.cu  test_simple.cu
(+9 files in other folders)
